[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"


[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.5"
winnow = { version = "0.6.16", features = ["simd"] }

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
